--- a/.github/workflows/Run JAR File with Input.yml
+++ b/.github/workflows/Run JAR File with Input.yml
@@ -23,8 +23,20 @@ jobs:
           minor=$(echo $latest_version | cut -d'.' -f2)
           patch=$(echo $latest_version | cut -d'.' -f3)
           next_version="$major.$minor.$(($patch + 1))"
-          # 保持三位数的版本号
-          echo "c" | echo "$next_version" | echo "y" | echo "y" | java -jar McPatchManage-1.1.15.jar 
+
+          # 使用 expect 模拟输入
+          expect -c "
+            spawn java -jar McPatchManage-1.1.15.jar
+            expect \"c\"
+            send \"c\r\"
+            expect \"Enter the new version number\"
+            send \"$next_version\r\"
+            expect \"Are you sure you want to create a new version?\"
+            send \"y\r\"
+            expect \"Are you sure you want to overwrite existing files?\"
+            send \"y\r\"
+            interact
+          "
       - name: Update Version File
         run: |
           echo "$next_version" > .version
